styles.css
* {
    font-family: serif;
    --navy1: #137;
    --navy2: #026;
    --navy3: #015;
    --cream: #fffbe3;
    --grey1: #333;
    --grey2: #333;
    --grey3: #666;
    --grey4: #bbb;
    --gold: rgb(218, 193, 54);

    --body-width: clamp(20ch, 60%, 80ch);
    --side-gutter-width: calc((100% - var(--body-width)) / 2);
    --footer-height: 120px;
    --header-height: 5%;

    --navy-gradient: linear-gradient(
        30deg,
        var(--navy1) 0%,
        var(--navy2) 20%,
        var(--navy3) 100%);

    background-color: white;
    color: var(--navy1);
}

body {
    margin: 0;
}

p, li, em, td {
    color: var(--grey1);
}

pre, code {
    font-family: monospace;
}

td, th {
    padding: 2px 10px;
}

.image-center {
    left: 15%;
    position: relative;
    width: 70%;
}

td, th {
    border: 1px solid var(--grey1);
    word-wrap: break-word;
}

.header-anchor {
    text-decoration: none;
    color: var(--grey4);
    font-family: monospace;
}

.index-personal-logo {
    left: calc(50% - 40px);
    position: relative;
    width: 80;
}

.main {
    border-radius: 2px;
    border: 1px solid var(--navy1);
    min-height: calc(100% - var(--footer-height) - var(--header-height));
    margin: 30px var(--side-gutter-width) 40px var(--side-gutter-width);
    padding: 5px 20px;
    width: var(--body-width);
}

.header {
    background: var(--navy-gradient);
    min-height: var(--header-height);
    padding: 20px var(--side-gutter-width) 10px var(--side-gutter-width);
    width: var(--body-width);
}

.header-button > * {
    border: 1px solid var(--navy1);
    border-radius: 2px;
    font-family: sans-serif;
    padding: 1px 8px;
}

.header-button > a {
    text-decoration: none;
}

.header-button-space {
    margin-left: 0.8em;
}

.header-button-float-right {
    float: right;
}

.footer {
    background: var(--navy-gradient);
    height: var(--footer-height);
    padding-top: 20px;
    text-align: center;
    width: 100%;
}

.footer * {
    background: rgb(0, 0, 0, 0);
    color: white;
}

